# 2d-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
src/: CMakeLists.txt  circle.c  circle.h  game_object.c  game_object.h  main.c  shape.c  shape.h  test.c
